# crypto_trading_bot

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
data/: symbols.json
models/: feature_columns.joblib  metadata.joblib  threshold.joblib  xgb_model.joblib
src/xgb_trader/: __init__.py  backtest.py  binance_client.py  config.py  data.py  features.py  labels.py  live.py  modeling.py  optimize_targets.py  pipeline.py
tests/: smoke_test.py
