[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "xgb-crypto-trader"
version = "0.1.0"
description = "Long-only XGBoost Binance Futures trading pipeline"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "requests>=2.32.0",
  "scikit-learn>=1.5.0",
  "xgboost>=2.0.0",
  "PyYAML>=6.0.0",
  "joblib>=1.4.0",
  "python-dotenv>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
